# lm-human-preferences

./: .gitignore  README_mine.md  a1.py  a5.py  launch.py  pyproject.toml  setup.sh  tldr_test.py
lm_human_preferences/: lm_tasks.py  policy.py  train_policy.py  train_reward.py
lm_human_preferences/language/: datasets.py  encodings.py  model.py  trained_models.py
lm_human_preferences/oaidatasets/: books.py  cnndm.py  tldr.py
lm_human_preferences/utils/: gcs.py  hyperparams.py
